ci(deps): prevent automatic updates of legacy Centrifugo

--- a/renovate.json
+++ b/renovate.json
@@ -8,6 +8,11 @@
     {
       "matchManagers": ["docker-compose"],
       "semanticCommitType": "fix"
+    },
+    {
+      "matchPackageNames": ["centrifugo/centrifugo"],
+      "matchCurrentVersion": "v3.0.5",
+      "enabled": false
     }
   ]
 }
